add prototype v1
